--- a/odontoPro/templates/Login/login.html
+++ b/odontoPro/templates/Login/login.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="cadastrar-clinica">
-                <p>Junte-se a nós. Cadastre a sua clínica <a href="{% url 'criarConta' %}">aqui</a></p>
+                <p>Junte-se a nós. Cadastre a sua clínica <a href="{% url 'cadastroclinica' %}">aqui</a></p>
             </div>
 
         </div>
